Añadido librería AOS, estructura de Cartas y cosas que amo de ti
Por ahora es dejar las estructuras, posteriormente trabajar con los contenidos

--- a/index.html
+++ b/index.html
@@ -23,24 +23,91 @@
       style="border-style: solid; border-color: red; text-align: center"
     >
       <main>
-        <section id="inicio">
-          <h2>Bienvenida mi vida</h2>
-          <p>
+        <div class="container-fluid" id="inicio">
+          <h1>❤️ ¡Bienvenida, mi vida! ❤️</h1>
+          <hr />
+          <h4>
             Este es un pequeño espacio donde guardaremos muchos de nuestros
-            recuerdos juntos ❤️
-          </p>
+            recuerdos juntos
+          </h4>
           <p>
             Tenía pensado hacerte esto ya hace tiempo, y creo que el tiempo ha
-            llegado...
+            <i>llegado...</i>
           </p>
           <p>
             Como puedes ver en la barra de navegación, hay varias secciones que
-            ya tienen algo de información. Lo que me emociona profundamente es
-            el poder ir rellenando esta página poco a poco; conociéndonos, estoy
-            seguro que tendremos más fotos para nuestra <a href="#">galería</a>,
-            más <a href="#">anécdotas</a>, más <a href="#">recuerdos</a>
+            ya tienen algo de información. <br />
+            Lo que me emociona profundamente es el poder ir rellenando esta
+            página poco a poco; conociéndonos, estoy seguro que tendremos más
+            fotos para nuestra <a href="#">galería</a>, más
+            <a href="#">anécdotas</a>, más <a href="#">recuerdos</a>
           </p>
-        </section>
+        </div>
+
+        <div class="container-fluid">
+          <div class="row justify-content-center">
+            <div class="card col-sm-4 col-md-3">
+              <div class="image-hover position-relative">
+                <img
+                  src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/testito.jpg"
+                  class="card-img-top"
+                  alt="Ourphotos"
+                />
+                <div class="overlay">
+                  <span>💖 Te amo 💖</span>
+                </div>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">📷 Galería 🖼️</h5>
+                <p class="card-text">
+                  Quizás aquí podamos ir teniendo nuestro álbum de fotos. (Sin
+                  olvidar nuestro 🌹 <i>libro de aventuras</i> 🌹)
+                </p>
+                <a href="#" class="btn card-button">Ver fotos</a>
+              </div>
+            </div>
+            <div class="card col-sm-4 col-md-3">
+              <div class="image-hover position-relative">
+                <img
+                  src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/testito.jpg"
+                  class="card-img-top"
+                  alt="Ourphotos"
+                />
+                <div class="overlay">
+                  <span>💖 Te amo 💖</span>
+                </div>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">✨ Anécdotas ✨</h5>
+                <p class="card-text">
+                  Hemos tenido muchas anécdotas que, estoy seguro nos podrán
+                  sacar muchas sonrisas 📝
+                </p>
+                <a href="#" class="btn card-button">Recordar es vivir</a>
+              </div>
+            </div>
+            <div class="card col-sm-4 col-md-3">
+              <div class="image-hover position-relative">
+                <img
+                  src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/testito.jpg"
+                  class="card-img-top"
+                  alt="Ourphotos"
+                />
+                <div class="overlay">
+                  <span>💖 Te amo 💖</span>
+                </div>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">👩‍❤️‍👨 Recuerdos 👫</h5>
+                <p class="card-text">
+                  Desde la primera vez que fuimos a Wimo, hasta la vez que me
+                  mandaste a dormir al piso... 😂
+                </p>
+                <a href="#" class="btn card-button">¿Te acuerdas cuando...</a>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <p>
           Home – Bienvenida con alguna frase o poema <br />
