--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -45,7 +45,7 @@
               <a class="nav-link" href="#">Galería</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Cartas</a>
+              <a class="nav-link" href="../cartas/cartas.html">Cartas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Anécdotas</a>
@@ -54,7 +54,7 @@
               <a class="nav-link" href="#">Playlist</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Amo que...</a>
+              <a class="nav-link" href="../10cosas/10cosas.html">Amo que...</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/recursos/recursos.html"
