Nuevas fotos pruebas
Agregado también recuerdos, anécdotas, cosas que me gustan de ella...

--- a/10cosas/10cosas.html
+++ b/10cosas/10cosas.html
@@ -48,8 +48,9 @@
           >
             <div class="content">
               <strong>Tu perseverancia</strong><br />
-              Amo la manera en que analizas todo, cómo cuestionas lo que te
-              rodea y cómo siempre estás buscando aprender más...
+              No te rindes fácilmente, y prueba de ello es la relación que
+              compartimos al día de hoy (La verdad sí me tuviste demasiada
+              paciencia )
             </div>
             <span class="icon">&#x1F3F9;</span>
           </li>
@@ -61,8 +62,8 @@
             <span class="icon">😂</span>
             <div class="content">
               <strong>Tu risa</strong><br />
-              Amo la manera en que analizas todo, cómo cuestionas lo que te
-              rodea y cómo siempre estás buscando aprender más...
+              Adoro que puedo saber dónde estás con solo escucharte reír (Es mi
+              técnica de ecolocalización). Además de que es demasiado contagiosa
             </div>
           </li>
           <li
@@ -72,8 +73,8 @@
           >
             <div class="content">
               <strong>Tus abrazos</strong><br />
-              Amo la manera en que analizas todo, cómo cuestionas lo que te
-              rodea y cómo siempre estás buscando aprender más...
+              Desde los primeros abrazos que nos dimos hasta el último, siempre
+              logran transmitir un cariño cálido y afable...
             </div>
             <span class="icon">🤗</span>
           </li>
@@ -85,8 +86,9 @@
             <span class="icon">👀</span>
             <div class="content">
               <strong>Tus ojos</strong><br />
-              Amo la manera en que analizas todo, cómo cuestionas lo que te
-              rodea y cómo siempre estás buscando aprender más...
+              <i>"...Brillan, y brillan tan lindo..."</i> Son preciosos tus
+              ojitos pispiretos, dicen que los ojos son la puerta del alma, y tu
+              tienes un alma tan pura
             </div>
           </li>
           <li
@@ -96,8 +98,10 @@
           >
             <div class="content">
               <strong>Cómo me apoyas</strong><br />
-              Amo la manera en que analizas todo, cómo cuestionas lo que te
-              rodea y cómo siempre estás buscando aprender más...
+              En todo este tiempo siempre me has estado apoyando, tu sabes
+              cuántas situaciones hemos pasado y siempre estás ahí. (Y no solo
+              conmigo, eres una excelente amiga que siempre está dispuesta a
+              apoyar en las situaciones más difíciles [Ámbar, por ejemplo...])
             </div>
             <span class="icon">💕</span>
           </li>
@@ -109,8 +113,9 @@
             <span class="icon">🎶</span>
             <div class="content">
               <strong>Tu voz</strong><br />
-              Amo la manera en que analizas todo, cómo cuestionas lo que te
-              rodea y cómo siempre estás buscando aprender más...
+              La forma en que cantas, la forma en que te diviertes; cuando me
+              cuentas tu día y/o tu anécdota... Esa vocecita es la que quiero
+              escuchar por mucho tiempo
             </div>
           </li>
           <li
@@ -120,8 +125,10 @@
           >
             <div class="content">
               <strong>Lo que compartimos</strong><br />
-              Amo la manera en que analizas todo, cómo cuestionas lo que te
-              rodea y cómo siempre estás buscando aprender más...
+              Aquí más bien es lo mega
+              <strong><i>polos opuestos</i></strong> que somos. Yo soy un
+              viejito y tu eres parte de la chaviza; y aún así nos
+              complementamos tan bien
             </div>
             <span class="icon">🥰</span>
           </li>
@@ -133,9 +140,23 @@
             <span class="icon">😜</span>
             <div class="content">
               <strong>Tus ocurrencias</strong><br />
-              Amo la manera en que analizas todo, cómo cuestionas lo que te
-              rodea y cómo siempre estás buscando aprender más...
+              Tienes tanta creatividad e imaginación que, te juro, no sé de
+              dónde sacas tantas ideas
             </div>
+          </li>
+          <li
+            data-aos="fade-down"
+            data-aos-easing="linear"
+            data-aos-duration="1500"
+          >
+            <div class="content">
+              <strong>Que bailas</strong><br />
+              Disfrutaba tanto el verte bailar, el ver lo mucho que lo
+              disfrutabas. Pero más disfrutaba poder ser tu pareja de baile y
+              ver esa felicidad en tus ojos en primera persona... (Tenemos que
+              volver a bailar juntos)
+            </div>
+            <span class="icon">🎶</span>
           </li>
         </ul>
       </div>
