--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="card col-sm-4 col-md-3">
               <div class="image-hover position-relative">
                 <img
-                  src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/testito.jpg"
+                  src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primerasalida.jpg"
                   class="card-img-top"
                   alt="Ourphotos"
                 />
@@ -63,7 +63,9 @@
                   Quizás aquí podamos ir teniendo nuestro álbum de fotos. (Sin
                   olvidar nuestro 🌹 <i>libro de aventuras</i> 🌹)
                 </p>
-                <a href="#" class="btn card-button">Ver fotos</a>
+                <a href="galeria/galeria.html" class="btn card-button"
+                  >Ver fotos</a
+                >
               </div>
             </div>
             <div class="card col-sm-4 col-md-3">
@@ -83,7 +85,9 @@
                   Hemos tenido muchas anécdotas que, estoy seguro nos podrán
                   sacar muchas sonrisas 📝
                 </p>
-                <a href="#" class="btn card-button">Recordar es vivir</a>
+                <a href="anecdotas/anecdotas.html" class="btn card-button"
+                  >Recordar es vivir</a
+                >
               </div>
             </div>
             <div class="card col-sm-4 col-md-3">
@@ -103,7 +107,9 @@
                   Desde la primera vez que fuimos a Wimo, hasta la vez que me
                   mandaste a dormir al piso... 😂
                 </p>
-                <a href="#" class="btn card-button">¿Te acuerdas cuando...</a>
+                <a href="recuerdos/recuerdos.html" class="btn card-button"
+                  >¿Te acuerdas cuando...</a
+                >
               </div>
             </div>
           </div>
