--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -39,22 +39,26 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Recuerdos</a>
+              <a class="nav-link" href="../recuerdos/recuerdos.html"
+                >Recuerdos</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Galería</a>
+              <a class="nav-link" href="../galeria/galeria.html">Galería</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../cartas/cartas.html">Cartas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Anécdotas</a>
+              <a class="nav-link" href="../anecdotas/anecdotas.html"
+                >Anécdotas</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Playlist</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../10cosas/10cosas.html">Amo que...</a>
+              <a class="nav-link" href="../10cosas/10cosas.html">Cualidades</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/recursos/recursos.html"
@@ -62,7 +66,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/pruebitas/pruebitas.html"
+              <a class="nav-link" href="/pruebitas/pruebabook.html"
                 >##PRUEBAS##</a
               >
             </li>
