--- a/cartas/cartas.html
+++ b/cartas/cartas.html
@@ -19,111 +19,193 @@
     <script src="/navbar/navbar.js"></script>
   </head>
   <body>
-    <div
-      class="div"
-      style="border-style: solid; border-color: red; text-align: center"
-    >
-      <h1>Poner cartas de ella</h1>
-      <li>Poner cartas tuyas</li>
-      <li>Poner poemas</li>
-      <li>Investigar resize de las tarjetas</li>
+    <div class="container-fluid" style="text-align: center">
+      <h1>Cartas, notas y poemas...</h1>
+      <p>
+        Creo que la idea es muy sencilla mi amor, simplemente quiero que
+        plasmemos todas nuestras cartitas y cartotas que nos hemos dado a lo
+        largo de estos 3 años...
+      </p>
       <div class="container-fluid">
         <div class="row justify-content-center">
-          <div class="card col-sm-2 col-md-2">
-            <img
-              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/testito.jpg"
-              class="card-img-top"
-              alt="..."
-            />
+          <div class="card col-sm-4 col-md-4 col-lg-3 col-xl-3">
             <div class="card-body">
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card’s content.
+                <i
+                  >"...Sigo buscando el poema que te nombre, pero no encuentro
+                  que quepa en un lienzo entero al paisaje; aún recuerdo el día
+                  en que soñé con tenerlo todo y mira, te conocí... Supe que no
+                  habría más noches frías de lamento cuando el fuego de tus ojos
+                  iluminó mi soledad; si fueras tiempo, serías el instante
+                  perfecto en el que quiero mi eternidad, y si no eres tu el
+                  amor de mi vida, solo diré que me equivoqué de vida, no de
+                  amor... Si por besarte tuviera que ir al infierno, lo haría
+                  sin pensarlo, así podría presumirle a los demonios de haber
+                  estado en el paraíso sin siquiera haber entrado..."</i
+                >
               </p>
             </div>
           </div>
-          <div class="card col-sm-2 col-md-2">
-            <img
-              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/testito.jpg"
-              class="card-img-top"
-              alt="..."
-            />
+          <div class="card col-sm-4 col-md-4 col-lg-3 col-xl-3">
             <div class="card-body">
               <p class="card-text">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s, when an unknown printer took a galley
-                of type and scrambled it to make a type specimen book. It has
-                survived not only five centuries, but also the leap into
-                electronic typesetting, remaining essentially unchanged. It was
-                popularised in the 1960s with the release of Letraset sheets
-                containing Lorem Ipsum passages, and more recently with desktop
-                publishing software like Aldus PageMaker including versions of
-                Lorem Ipsum
+                <i
+                  >"...A veces pienso que tu risa es un poema que Dios escribió
+                  el día que se enamoró del mundo..."</i
+                >
               </p>
             </div>
           </div>
-          <div class="card col-sm-2 col-md-2">
-            <img
-              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/testito.jpg"
-              class="card-img-top"
-              alt="..."
-            />
+          <div class="card col-sm-4 col-md-4 col-lg-3 col-xl-3">
             <div class="card-body">
               <p class="card-text">
-                Contrary to popular belief, Lorem Ipsum is not simply random
-                text. It has roots in a piece of classical Latin literature from
-                45 BC, making it over 2000 years old. Richard McClintock, a
-                Latin professor at Hampden-Sydney College in Virginia, looked up
-                one of the more obscure Latin words, consectetur, from a Lorem
-                Ipsum passage, and going through the cites of the word in
-                classical literature, discovered the undoubtable source. Lorem
-                Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus
-                Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero,
-                written in 45 BC. This book is a treatise on the theory of
-                ethics, very popular during the Renaissance. The first line of
-                Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line
-                in section 1.10.32. The standard chunk of Lorem Ipsum used since
-                the 1500s is reproduced below for those interested. Sections
-                1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by
-                Cicero are also reproduced in their exact original form,
-                accompanied by English versions from the 1914 translation by H.
-                Rackham.
+                <i
+                  >"...Si cada estrella representara un motivo para amarte, el
+                  universo no sería suficiente..."</i
+                >
               </p>
             </div>
           </div>
-          <div class="card col-sm-2 col-md-2">
-            <img
-              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/testito.jpg"
-              class="card-img-top"
-              alt="..."
-            />
+          <div class="card col-sm-4 col-md-4 col-lg-3 col-xl-3">
             <div class="card-body">
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card’s content.
+                <i
+                  >"...Siempre pensé que un hogar se basaba en cuatro paredes y
+                  un techo; un par de puertas y ventanas, a evces alfombras y
+                  fogatas para conservar el calor; hasta que te conocí. En ese
+                  momento mi hogar cambió, ahora tienen brazos que me cuidan del
+                  frío, un par de manos en las que confío y un corazón que late
+                  junto al mío..."</i
+                >
               </p>
             </div>
           </div>
-          <div class="card col-sm-2 col-md-2">
-            <img
-              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/testito.jpg"
-              class="card-img-top"
-              alt="..."
-            />
+          <div class="card col-sm-4 col-md-4 col-lg-3 col-xl-3">
             <div class="card-body">
               <p class="card-text">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s, when an unknown printer took a galley
-                of type and scrambled it to make a type specimen book. It has
-                survived not only five centuries, but also the leap into
-                electronic typesetting, remaining essentially unchanged. It was
-                popularised in the 1960s with the release of Letraset sheets
-                containing Lorem Ipsum passages, and more recently with desktop
-                publishing software like Aldus PageMaker including versions of
-                Lorem Ipsum
+                <i
+                  >"...Mientras me sigas matando de amor, te seguiré entregando
+                  mi vida..."</i
+                >
               </p>
+            </div>
+          </div>
+          <div class="card col-sm-4 col-md-4 col-lg-3 col-xl-3">
+            <div class="card-body">
+              <p class="card-text">
+                <i
+                  >"...Dicen que nada está escrito en piedra, excepto mi amor
+                  por ti..."</i
+                >
+              </p>
+            </div>
+          </div>
+          <hr />
+          <div class="postit-grid">
+            <div class="postit" style="background-color: var(--rosa-pastel)">
+              <p>Te amo mi niño LINDO PRECIOSO</p>
+            </div>
+            <div class="postit" style="background-color: var(--rosa-pastel)">
+              <p>Eres el Mejor ❤️</p>
+            </div>
+            <div class="postit" style="background-color: var(--amarillo)">
+              <p>Respira lo vas a lograr ❤️</p>
+            </div>
+            <div class="postit" style="background-color: var(--amarillo)">
+              <p>TU PUEDES eres el mejor</p>
+            </div>
+            <div class="postit" style="background-color: var(--pistache)">
+              <p>Te amo ❤️</p>
+            </div>
+            <div class="postit" style="background-color: var(--pistache)">
+              <p>Puedes con todo eso y más!!! ❤️</p>
+            </div>
+            <div class="postit" style="background-color: var(--amarillo)">
+              <p>Te amo mucho mi AMORCIS</p>
+            </div>
+            <div class="postit" style="background-color: var(--amarillo)">
+              <p>Eres capaz de todo y más!!!</p>
+            </div>
+            <div class="postit" style="background-color: var(--amarillo)">
+              <p>Tomate tu tiempo</p>
+            </div>
+            <div class="postit" style="background-color: var(--amarillo)">
+              <p>Tu puedes con ❤️ todo</p>
+            </div>
+            <div class="postit" style="background-color: var(--amarillo)">
+              <p>Te amo ❤️</p>
+            </div>
+            <div class="postit" style="background-color: var(--rosa-pastel)">
+              <p>Gracias por ser tan maravilloso</p>
+            </div>
+            <div class="postit" style="background-color: var(--amarillo)">
+              <p>Eres súper inteligente ❤️</p>
+            </div>
+            <div class="postit" style="background-color: var(--pistache)">
+              <p>Gracias por estar en mi vida y siempre ayudarme</p>
+            </div>
+            <div class="postit" style="background-color: var(--pistache)">
+              <p>TE AMO NENE</p>
+            </div>
+            <div class="postit" style="background-color: var(--rosa-pastel)">
+              <p>TE AMOO❤️</p>
+            </div>
+            <div class="postit" style="background-color: var(--amarillo)">
+              <p>Siempre voy a estar a tu lado, sin importar qué pase</p>
+            </div>
+            <div class="postit" style="background-color: var(--pistache)">
+              <p>Nunca dudces de ti mi amor, NUNCA</p>
+            </div>
+            <div class="postit" style="background-color: var(--rosa-pastel)">
+              <p>Te amo tal y como eres, no te cambiaría nada</p>
+            </div>
+            <div class="postit" style="background-color: var(--pistache)">
+              <p>Tranquilo, va a pasar lo que tenga que pasar</p>
+            </div>
+            <div class="postit" style="background-color: var(--rosa-pastel)">
+              <p>Gracias por ser tan paciente conmigo ❤️</p>
+            </div>
+            <div class="postit" style="background-color: var(--azulito)">
+              <p>Recuerda que estoy contigo para ayudarte con todooo</p>
+            </div>
+            <div class="postit" style="background-color: var(--rosa-pastel)">
+              <p>Tu puedes con el trabajo, con eso y más</p>
+            </div>
+            <div class="postit" style="background-color: var(--rosa-pastel)">
+              <p>Estás destinado a grandes cosas mi amor</p>
+            </div>
+            <div class="postit" style="background-color: var(--azulito)">
+              <p>Gracias por ser tan MARAVILLOSO</p>
+            </div>
+            <div class="postit" style="background-color: var(--rosa-pastel)">
+              <p>TU PUEDES CON TODO</p>
+            </div>
+            <div class="postit" style="background-color: var(--azulito)">
+              <p>Estás destinado a la GRANDEZA ❤️</p>
+            </div>
+            <div class="postit" style="background-color: var(--rosa-pastel)">
+              <p>Gracias por AMARME tal y como soy</p>
+            </div>
+            <div class="postit" style="background-color: var(--azulito)">
+              <p>NUNCA DUDES DE TUS HABILIDADES</p>
+            </div>
+            <div class="postit" style="background-color: var(--rosa-pastel)">
+              <p>Eres el mejor ingeniero en sistemas del mundo</p>
+            </div>
+            <div class="postit" style="background-color: var(--amarillo)">
+              <p>VAS A LOGRAR TODOS TUS SUEÑOS</p>
+            </div>
+            <div class="postit" style="background-color: var(--rosa-pastel)">
+              <p>Eres perfecto para mi, eres perfectooo</p>
+            </div>
+            <div class="postit" style="background-color: var(--amarillo)">
+              <p>No importa que paase, no olvides que eres muy CAPAZ</p>
+            </div>
+            <div class="postit" style="background-color: var(--rosa-pastel)">
+              <p>Te amooo Eres el mejor novio de este mundooo ❤️</p>
+            </div>
+            <div class="postit" style="background-color: var(--amarillo)">
+              <p>Puedes con todo y mucho más amor TE AMO</p>
             </div>
           </div>
         </div>
