--- a/galeria/galeria.html
+++ b/galeria/galeria.html
@@ -30,7 +30,10 @@
       class="container-fluid container-wrapper"
       style="border-style: solid; border-color: green"
     >
-      <div class="flipbook">
+      <div
+        class="flipbook"
+        style="border-style: solid; border-color: blueviolet"
+      >
         <div class="hard"><h1>Nuestro libro de aventuras</h1></div>
         <div class="hard">
           <h4>Cada día contigo es una aventura...</h4>
@@ -41,12 +44,10 @@
           <small>❤️ Siempre juntos ❤️</small>
         </div>
         <div>
+          <br /><br />
+          <small>Cuando todo empezó...</small>
           <img
-            src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/testito.jpg"
-            alt=""
-          />
-          <img
-            src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/testito.jpg"
+            src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primerasalida.jpg"
             alt=""
           />
         </div>
