--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
     <script src="/navbar/navbar.js"></script>
   </head>
   <body>
-    <div
-      class="div"
-      style="border-style: solid; border-color: red; text-align: center"
-    >
+    <div class="container-fluid" style="text-align: center">
       <main>
         <div class="container-fluid" id="inicio">
           <h1>❤️ ¡Bienvenida, mi vida! ❤️</h1>
@@ -38,8 +35,8 @@
             Como puedes ver en la barra de navegación, hay varias secciones que
             ya tienen algo de información. <br />
             Lo que me emociona profundamente es el poder ir rellenando esta
-            página poco a poco; conociéndonos, estoy seguro que tendremos más
-            fotos para nuestra <a href="#">galería</a>, más
+            página poco a poco; <br />conociéndonos, estoy seguro que tendremos
+            más fotos para nuestra <a href="#">galería</a>, más
             <a href="#">anécdotas</a>, más <a href="#">recuerdos</a>
           </p>
         </div>
@@ -54,7 +51,10 @@
                   alt="Ourphotos"
                 />
                 <div class="overlay">
-                  <span>💖 Te amo 💖</span>
+                  <span
+                    >💖<i>También tenemos un libro de aventuras virtual</i
+                    >📖</span
+                  >
                 </div>
               </div>
               <div class="card-body">
@@ -86,19 +86,22 @@
                   sacar muchas sonrisas 📝
                 </p>
                 <a href="anecdotas/anecdotas.html" class="btn card-button"
-                  >Recordar es vivir</a
+                  >La pelotita de Liverpool</a
                 >
               </div>
             </div>
             <div class="card col-sm-4 col-md-3">
               <div class="image-hover position-relative">
                 <img
-                  src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/testito.jpg"
+                  src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/patinajehielo.jpg"
                   class="card-img-top"
                   alt="Ourphotos"
                 />
                 <div class="overlay">
-                  <span>💖 Te amo 💖</span>
+                  <span
+                    >💖<i>Recordar es vivir, y quiero recordar contigo </i
+                    >🥰</span
+                  >
                 </div>
               </div>
               <div class="card-body">
@@ -114,18 +117,6 @@
             </div>
           </div>
         </div>
-
-        <p>
-          Home – Bienvenida con alguna frase o poema <br />
-          Nuestra historia – Línea del tiempo interactiva <br />
-          Galería de fotos – Por año, lugar o tipo de recuerdos Videos o clips
-          de momentos especiales <br />
-          Poemas/cartas tuyas <br />
-          Anécdotas graciosas – Texto con emojis o ilustraciones <br />
-          Playlist compartida de Spotify <br />
-          Frases favoritas o inside jokes <br />
-          "Lo que más me gusta de ti" (tipo lista de 10 cosas)
-        </p>
       </main>
 
       <footer>
