--- a/recuerdos/recuerdos.html
+++ b/recuerdos/recuerdos.html
@@ -25,28 +25,166 @@
       style="border-style: solid; border-color: red; text-align: center"
     >
       <section class="recuerdos-section">
-        <h2 class="section-title">🌟 Nuestros Recuerdos</h2>
+        <h2 class="section-title">🌟 Nuestros recuerdos 🌟</h2>
 
         <div class="postit-grid">
           <div class="postit" style="background-color: #fff3cd">
-            <p>El primer te amo ❤️</p>
+            <h1>
+              El primer <strong><i>Te amo</i></strong> ❤️
+            </h1>
           </div>
           <div class="postit" style="background-color: #d1ecf1">
             <img
-              src="https://picsum.photos/200/150?random=1"
+              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primerasalida.jpg"
               alt="Recuerdo 1"
             />
-            <p>Foto del primer picnic</p>
+            <p>Nuestra primera foto juntos</p>
+          </div>
+          <div class="postit" style="background-color: #f8d7da">
+            <p>Cuando te llevé huevos porque ya no tenían para desayunar</p>
+          </div>
+          <div class="postit" style="background-color: #fff3cd">
+            <img
+              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/patinajehielo.jpg"
+              alt="Recuerdo 2"
+            />
+            <p>La primera vez que fuimos a patinar</p>
+          </div>
+          <div class="postit" style="background-color: var(--pistache)">
+            <p>
+              Cuando viniste a León y me dejaste tu suéter rosa porque me sentía
+              mal
+            </p>
+          </div>
+          <div class="postit" style="background-color: #e2e3e5">
+            <img
+              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/patinajehielo.jpg"
+              alt="Recuerdo 2"
+            />
+            <p>Nuestro primer picnic en el parque</p>
           </div>
           <div class="postit" style="background-color: #f8d7da">
             <p>Tu abrazo cuando más lo necesitaba 🤗</p>
           </div>
-          <div class="postit" style="background-color: #e2e3e5">
+          <div class="postit" style="background-color: var(--lavanda)">
             <img
               src="https://picsum.photos/200/150?random=2"
               alt="Recuerdo 2"
             />
-            <p>La noche viendo estrellas</p>
+            <p>Nuestro picnic en el Tangamaga (Que te destrocé en el UNO)</p>
+          </div>
+          <div class="postit" style="background-color: #f8d7da">
+            <p>Tu abrazo cuando más lo necesitaba 🤗</p>
+          </div>
+          <div class="postit" style="background-color: var(--salmon)">
+            <img
+              src="https://picsum.photos/200/150?random=2"
+              alt="Recuerdo 2"
+            />
+            <p>
+              Cuando no te la creías que estábamos en Wimo juntos (La primera
+              vez)
+            </p>
+          </div>
+          <div class="postit" style="background-color: var(--pistache)">
+            <p>
+              Cuando señorita <i>"Tengo mucho calor"</i> me mandó a mimir al
+              piso
+            </p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <img
+              src="https://picsum.photos/200/150?random=2"
+              alt="Recuerdo 2"
+            />
+            <p>
+              La primera vez que fui a San Luis y estaba nervioso; pensando que
+              tu papá me querría matar
+            </p>
+          </div>
+          <div class="postit" style="background-color: var(--pistache)">
+            <p>Cuando me ganaste en el UNO y te aposté un Starbucks</p>
+          </div>
+          <div class="postit" style="background-color: var(--pistache)">
+            <p>La vez que fuimos a Las Duyas con mis abuelos</p>
+          </div>
+          <div class="postit" style="background-color: var(--pistache)">
+            <p>
+              La primera vez que fui a verte en tu partido y me dijiste:
+              <i>"Entonces así se siente que vengan a verte..."</i>
+            </p>
+          </div>
+          <div class="postit" style="background-color: var(--pistache)">
+            <p>Cuando hicimos un equipazo en el trabajo de Francés</p>
+          </div>
+          <div class="postit" style="background-color: var(--pistache)">
+            <p>Cuando te llevaste la pelotita de Liverpool jijiji</p>
+          </div>
+          <div class="postit" style="background-color: var(--pistache)">
+            <p>Nuestra primera ida al Festival del Globo</p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>Cuando fuimos a recoger a la Trufa 🐶</p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>Aquella noche que vimos "Encanto" 💖</p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>En nuestra primera salida, que te compré donas de "El Globo"</p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>Nuestro primer baile oficial juntos en la uni</p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>Cuando estuvimos juntos en tu operación de tu tobillo</p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>
+              Cuando "No subí" tu tarea y pensaste que todo se había estropeado
+              (Y al final ni pasó nada)
+            </p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>Nuestro San Valentín en Casa Biznaga</p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>Nuestro viaje a Puerto Vallarta</p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>
+              La mega desvelada que nos dimos en Puerto Vallarta por el viaje al
+              día siguiende
+            </p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>Nuestra cena de Navidad (100/10)</p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>
+              Las primeras veces que fuimos a Sushi Roll (Que se me cayó mi
+              rollo en la soya)
+            </p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>Cuando paseábamos a la Chabe en el parquecito</p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>Cuando la hice de tu traductor porque te quedaste afónica</p>
+          </div>
+          <div class="postit" style="background-color: var(--amarillo)">
+            <p>Cuando te mandé la canción "Would you be so kind"</p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>Cuando pedimos 2 rollos cada uno y no llegábamos. . .</p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>Cuando pedimos 2 rollos cada uno y no llegábamos. . .</p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>Cuando pedimos 2 rollos cada uno y no llegábamos. . .</p>
+          </div>
+          <div class="postit" style="background-color: var(--lavanda)">
+            <p>Cuando pedimos 2 rollos cada uno y no llegábamos. . .</p>
           </div>
           <!-- Puedes duplicar más post-its -->
         </div>
