--- a/10cosas/10cosas.html
+++ b/10cosas/10cosas.html
@@ -20,10 +20,7 @@
     <script src="/navbar/navbar.js"></script>
   </head>
   <body>
-    <div
-      class="div"
-      style="border-style: solid; border-color: red; text-align: center"
-    >
+    <div class="container-fluid">
       <div class="container mt-4">
         <h2 class="text-center mb-4">💘 Cosas que amo de ti 💘</h2>
         <hr />
