Prueba nuevo Navbar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div id="navbar"></div>
 
     <link rel="stylesheet" href="styles.css" />
-    <script src="/navbar/navbar.js"></script>
+    <!--<script src="/navbar/navbar.js"></script>-->
+    <script src="/js/navbar.js"></script>
   </head>
   <body>
     <div class="container-fluid" style="text-align: center">
