--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <div id="navbar"></div>
+    <nav id="navbar"></nav>
 
     <link rel="stylesheet" href="styles.css" />
     <!--<script src="/navbar/navbar.js"></script>-->
