--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <link rel="stylesheet" href="styles.css" />
     <!--<script src="/navbar/navbar.js"></script>-->
-    <script src="/js/navbar.js"></script>
+    <!--<script src="/js/navbar.js"></script>-->
+    <script src="/our-repo/navbar/navbar.js"></script>
   </head>
   <body>
     <div class="container-fluid" style="text-align: center">
